resolve css bug on small screen

--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ body{
     width: 5rem;
     height: 5rem;
     image-rendering: pixelated;
-
+    object-fit: contain;
 }
 
 #modal-title{
